Renders the output of the spatial pooler onto a canvas as an array of dots.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <script src="js/htm.js"></script>
     </head>
     <body>
-
+        <canvas id="canvas"></canvas>
+        <div>
+            t = <span id="time">undefined</span>
+        </div
     </body>
 </html>
