Fixes a few misc bugs, such as the same cell always being chosen for learning.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <canvas id="canvas"></canvas>
         <div>
-            t = <span id="time">undefined</span>
+            t = <span id="time">undefined</span><br>
+            input = <span id="input">undefined</span>
         </div
     </body>
 </html>
