--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                     <canvas id="canvas"></canvas>
                     <div class="unit span-grid">
                         t = <span id="time">undefined</span><br>
-                        input = <span id="input">undefined</span>
+                        input = <span id="input">undefined</span><br>
+                        % cols predicted = <span id="pred-actv-pct">undefined</span>
                     </div>
                 </div>
                 <div class="unit three-of-four" id="alphanum-canvs"></div>
