Implements a coordinate encoder. Uses it to predict the user's mouse movements.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/toast.css">
 
+        <script src="js/rng.js"></script>
         <script src="js/htm.js"></script>
     </head>
     <body>
