--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
                         </div>
                         <div class="unit one-of-five">
                             <h3>Real Time Stats</h3>
-                            t: <span id="time">undefined</span><br>
-                            input: <span id="input">undefined</span><br>
-                            cols predicted: <span id="pred-actv-pct">undefined</span>
+                            t: <span id="time"></span><br>
+                            input: <span id="input"></span><br>
+                            prediction: <span id="pred"></span><br>
+                            cols predicted: <span id="pred-actv-pct"></span>
+                            inps predicted: <span id="pred-inp-pct"></span>
                         </div>
                     </div>
                 </div>
