Abstracts out the SP and TP into a 'Layer'.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <div class="unit one-of-five">
                             <h3>Real Time Stats</h3>
                             t: <span id="time"></span><br>
-                            input: <span id="input"></span><br>
-                            prediction: <span id="pred"></span><br>
+                            input: <span id="input" style="font-family: Monospace"></span><br>
+                            prediction: <span id="pred" style="font-family: Monospace"></span><br>
                             cols predicted: <span id="pred-actv-pct"></span>
                             inps predicted: <span id="pred-inp-pct"></span>
                         </div>
