Limits how many distal dendrites a cell can have.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="unit span-grid">
                     <h2 style="text-align: center">uition.js -- Hierarchical Temporal Memory</h2>
                     <hr>
-                    <div class="unit one-of-two">
+                    <div class="unit two-of-three">
                         <div class="unit four-of-five" style="text-align: center">
                             <h3>Temporal Memory</h3>
                             <canvas id="canvas"></canvas>
